Issue #SB-15472 Course Dashboard: User count is overlapping with portal footer

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -65,7 +65,7 @@ body {
 @include respond-below(sm) {
   .footer-fix {
     min-height: calc(100vh - 336px);
-    padding-bottom: $base-block-space * 3;
+    padding-bottom: 24px;
   }
 }
 .sb-offline {
